# excel_tools_mcp

./: .dockerignore  .gitignore  .npmignore  Dockerfile  README.md  package.json  pyproject.toml
.venv-publish/: pyvenv.cfg
excel_tools/: __init__.py  core_utils.py  exceptions.py  inspect_excel.py  mcp_instance.py  profile_structure.py  read_backends.py  read_excel.py  server.py  unmerged_cells.py
excel_tools/domain/: __init__.py  merged_cells.py  ranges.py  sheets.py
excel_tools/models/: __init__.py  schemas.py
excel_tools/operations/: __init__.py  inspect_workbook.py  profile_structure.py  read_range.py  unmerge_cells.py
excel_tools/readers/: __init__.py  calamine_reader.py  files.py  openpyxl_reader.py  protocol.py  selector.py
excel_tools/runtime/: __init__.py  tool_runtime.py
excel_tools/tools/: __init__.py  inspect_excel.py  profile_structure.py  read_excel.py  unmerged_cells.py
excel_tools_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
