[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-tools-mcp"
version = "0.1.0"
description = "A standalone MCP server for inspecting and reading Excel files."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "wasziyang" }]
keywords = ["excel", "xlsx", "xls", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.27.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "python-calamine>=0.6.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
excel-tools-mcp = "excel_tools.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["excel_tools*"]
